--- a/source/repos/os-1/os-1/os-1.vcxproj
+++ b/source/repos/os-1/os-1/os-1.vcxproj
@@ -117,6 +117,9 @@
   <ItemGroup>
     <ClInclude Include="memory_area.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="memory_area.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
