--- a/source/repos/os-1/os-1/os-1.vcxproj.filters
+++ b/source/repos/os-1/os-1/os-1.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="memory_area.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
