--- a/source/repos/os-1/os-1/os-1.vcxproj.filters
+++ b/source/repos/os-1/os-1/os-1.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="memory_area.cpp">
+    <ClCompile Include="memory_area.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
