--- a/source/repos/os-1/os-1/os-1.vcxproj
+++ b/source/repos/os-1/os-1/os-1.vcxproj
@@ -115,7 +115,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="memory_area.h" />
+    <ClInclude Include="Файлы заголовков\mmemory.h" />
+    <ClInclude Include="Файлы заголовков\memory_area.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Исходные файлы\mmemory.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
