write read funct

--- a/source/repos/os-1/os-1/os-1.vcxproj
+++ b/source/repos/os-1/os-1/os-1.vcxproj
@@ -122,7 +122,7 @@
     <ClCompile Include="Исходные файлы\mmemory.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="memory_area.c" />
+    <ClCompile Include="Исходные файлы\memory_area.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
