finish lab with simple test

--- a/os-1/os-1.vcxproj
+++ b/os-1/os-1.vcxproj
@@ -119,6 +119,7 @@
     <ClInclude Include="Файлы заголовков\memory_area.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Исходные файлы\main.c" />
     <ClCompile Include="Исходные файлы\mmemory.c" />
   </ItemGroup>
   <ItemGroup>
